<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  tools:showIn="@layout/fragment_chapter_info">

  <TextView
    android:id="@+id/tagline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about"
    style="@style/Widget.GDG.TextView.CardHeader" />

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.GDG.CardView">

    <LinearLayout
      android:id="@+id/about_box"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center">

      <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email|map|web"
        android:padding="@dimen/keyline_1" />
    </LinearLayout>
  </android.support.v7.widget.CardView>
</merge>