<?xml version="1.0" encoding="utf-8"?>
<TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@android:id/text1"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:gravity="center_vertical"
  android:minHeight="?android:attr/listPreferredItemHeightSmall"
  android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
  android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
